# assignment111

./: .gitignore  README.md  requirements.txt
data/: sample_pointcloud.pcd  sample_pointcloud_copy.pcd
ros2_ws/src/env_check_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/env_check_pkg/src/: listener.cpp  talker.cpp
scripts/: run_smoke_tests.py  test_open3d_pointcloud.py  test_python_env.py
src/env_check_pkg/launch/: env_check.launch.py
