<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema-instance"?>
<package format="3">
  <name>env_check_pkg</name>
  <version>0.1.0</version>
  <description>AAE5303 ROS 2 talker/listener sanity check package.</description>
  <maintainer email="aae5303@polyu.edu">AAE5303 Teaching Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

